Fix overlay on small screens

--- a/src/components/MovieInfo/style.scss
+++ b/src/components/MovieInfo/style.scss
@@ -24,12 +24,21 @@
     position: absolute;
     z-index: -1;
     width: 100%;
+
+    @media (max-width: $mobile) {
+        height: 420px;
+        object-fit: cover;
+    }
 }
 
 .overlay {
     width: 100%;
     height: 100%;
     background: linear-gradient(to bottom, $overlayS, $mainBack);
+
+    @media (max-width: $mobile) {
+        height: 420px;
+    }
 }
 
 .overview {
